--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+v3-format-storage (0.1.1) zelazny; urgency=low
+
+  * Remove mtd-utils dependency, flash_eraseall moved to busybox
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Mon, 03 Jan 2011 12:46:26 +0100
+
 v3-format-storage (0.1) asimov; urgency=low
 
   * First build for OpenInkpot.
